# sre-agent

./: Dockerfile  Makefile  README.md  agent.py  docker-compose.yml  input.py  prompts.py  pyproject.toml  triage_unstructured.py
examples/: incident_summary.py  sample_incident.json  simple_usage.py  webhook_handler.py
helm/ai-sre-agent/: Chart.yaml  values-production.yaml  values.yaml
helm/ai-sre-agent/templates/: NOTES.txt  _helpers.tpl  agent-deployment.yaml  agent-hpa.yaml  agent-ingress.yaml  agent-pvc.yaml  agent-service.yaml  api-deployment.yaml  beat-deployment.yaml  configmap.yaml  extras.yaml  mcp-confluence.yaml  mcp-deployments.yaml  mcp-gitlab.yaml  mcp-jira.yaml  networkpolicy.yaml  pdb.yaml  secrets.yaml  serviceaccount.yaml  worker-deployment.yaml
src/agent/: __init__.py  agent.py  cli.py  database.py  local.py  mcp_client.py  mcp_test.py  prompts.py  rag.py  server.py  tasks.py
src/config/: settings.py
src/mcp_servers/: __init__.py
src/mcp_servers/confluence/: __init__.py  server.py  tools.py
src/mcp_servers/gitlab/: __init__.py  server.py  tools.py
src/mcp_servers/jira/: __init__.py  server.py  tools.py
tests/: conftest.py  test_mcp_servers.py  test_rag.py
